# soft-posit-cpp

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md
.github/workflows/: README.md  benchmarks.yml  build-riscv.yml  cache-build.yml  ci.yml  clang-tidy.yml  code-quality.yml  code-style.yml  deb_packaging.yml  local-tests.yml  multi-platform-build.yml  package.yml  shared-build.yml  shared-setup.yml  tests.yml  unit-tests.yml
LUT_helpers/: ceil_lut.py  exp2_lut.py  log2_lut.py  lut_cos.py  lut_gen.py  lut_gen_trig.py  lut_parameters.py  lut_sin.py  lut_sin_cos.py  lut_tan.py
benchmarks/performance/: p16_bench.cpp  p8_bench.cpp
cmake/: SoftPositConfig.cmake.in
data/control_theory/: plot_simulation.py  requirements.txt  simulation_data.csv
examples/: CMakeLists.txt  README.md  build.sh
examples/cmake/: FindSoftPosit.cmake
examples/control_theory_stabilization/: CMakeLists.txt  README.md  control_stabilization.cpp
examples/fourier_transform/: CMakeLists.txt  README.md  fourier_transform.cpp
examples/julia_set_zoom/: julia_set_float.cpp  julia_set_posit.cpp
examples/mandelbrot/: CMakeLists.txt  README.md  mandelbrot.cpp  posit_mandelbrot.cpp
examples/matrix_precision/: CMakeLists.txt  README.md  matrix_multiplication.cpp
examples/multiplication_closure/: CMakeLists.txt  README.md  multiplication_closure.cpp
include/: internals.h  softposit.h  softposit_cpp.h
include/p8_LUTs/: p8_acos_pi_LUT.h  p8_asin_pi_LUT.h  p8_atan_pi_LUT.h  p8_ceil_LUT.h  p8_cos_pi_LUT.h  p8_exp2_LUT.h  p8_exp_LUT.h  p8_ln_LUT.h  p8_log2_LUT.h  p8_sin_pi_LUT.h  p8_sqrt_LUT.h  p8_tan_pi_LUT.h
python/: softposit.py
src/: c_convertDecToPosit32.c  c_convertDecToPosit8.c  p16_acos_pi.c  p16_exp.c  p16_ln.c  p16_mulAdd.c  p16_mulAdd_subC.c  p16_mulAdd_subProd.c  p16_to_p8.c  p32_mulAdd.c  p32_mulAdd_subC.c  p32_mulAdd_subProd.c  p32_to_i64.c  p32_to_p16.c  p8_ceil.c  p8_cos_pi.c  p8_exp.c  p8_exp2.c  p8_ln.c  p8_log2.c  p8_mulAdd_subC.c  p8_mulAdd_subProd.c  p8_sin_pi.c  p8_sqrt.c  p8_tan_pi.c  pX1_to_p8.c  s_approxRecipSqrt_1Ks.c  s_mulAddP16.c  s_mulAddP32.c  s_mulAddP8.c  ui64_to_pX1.c
tests/: p16_test.cpp  p32_test.cpp  p8_test.cpp
tests/common_tests/: random_generators.h  test_constants.h  test_helpers.h
tests/p16_tests/: advanced_tests.cpp  arithmetic_tests.cpp  math_functions_tests.cpp
tests/p32_tests/: arithmetic_tests.cpp  math_functions_tests.cpp
tests/p8_tests/: advanced_tests.cpp  arithmetic_tests.cpp  inverse_trig_functions_tests.cpp  logarithm_functions_tests.cpp  p8_advanced_test.cpp  p8_arithmetic_test.cpp  p8_conversion_test.cpp  p8_test.cpp  rounding_functions_tests.cpp  trigonometric_functions_tests.cpp
tests/q8_tests/: q8_operations_test.cpp
